Added commic and gravatar system for posters...

--- a/_posts/2013-1-31-First-Post.html
+++ b/_posts/2013-1-31-First-Post.html
@@ -1,5 +1,6 @@
 ---
 layout: post
 title: Test Post
+author: colton
 ---
 Thank you for joining me today. Today, I would just like to announce my new art comic blog thingy majiggy. I hope you enjoy after I post more. Thanks for visiting!
