--- a/webdev.html
+++ b/webdev.html
@@ -3,7 +3,7 @@ layout: main
 title: Web Development Series
 ---
 <ul>
-{% for post in site.categories.webev %}
+{% for post in site.categories.webdev %}
 <li>
 <a href='{{ post.url }}'>{{ post.title }}</a> - {{ post.date | date: "%B %e, %Y" }}
 </li>
